--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/style.css">
     <title>Mini Portfólio</title>
 </head>
 <body>
@@ -20,18 +22,18 @@
 
         <div class="conteudo">
            <ul class="abas">
-             <li class="abas">
+             <li class="aba selecionado">
                 <img src="src/imgs/sobre.gif" alt="icone de sobre mim">
             </li>
 
-             <li class="abas">
+             <li class="aba">
                 <img src="src/imgs/coracao.gif" alt="icones de redes sociais">
             </li>
 
            </ul>
 
            <div class="informacoes-abas"> 
-                <div class="informacao">
+                <div class="informacao selecionado">
                       <h3 class="sub-titulo">Sobre</h3>
 
                       
@@ -43,7 +45,7 @@
                               Sempre tive o sonho de trabalhar com programação e atualmente comecei a 
                               colocar em prática estudando <span>HTML, CSS e JavaScript</span>. 
                               Gosto muito de café (ate demais), e meus principais passatempos 
-                              são jogar MMO RPG, ver anime e series</p>
+                              são jogar MMO RPG, ver anime e series.</p>
                             
                       </div>
                 </div>
@@ -51,7 +53,7 @@
                 <div class="informacao">
                      <h3 class="sub-titulo">Minhas redes</h3>
 
-                     <ul class="redes-socias">
+                     <ul class="redes-sociais">
 
                         <li>
                             <a href="https://drive.google.com/file/d/1ss-FGtko7vIymCBDydPgf7qUHV0xaX4B/view?usp=sharing" 
