--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/rolagem.css">
     <title>Mini Portfólio</title>
 </head>
 <body>
@@ -22,35 +23,36 @@
 
         <div class="conteudo">
            <ul class="abas">
-             <li class="aba selecionado">
+             <li class="aba selecionado" id="sobre-mim">
                 <img src="src/imgs/sobre.gif" alt="icone de sobre mim">
             </li>
 
-             <li class="aba">
+             <li class="aba"  id="minhas-redes">
                 <img src="src/imgs/coracao.gif" alt="icones de redes sociais">
             </li>
 
            </ul>
 
            <div class="informacoes-abas"> 
-                <div class="informacao selecionado">
+                <div class="informacao selecionado" id="informacao-sobre-mim">
                       <h3 class="sub-titulo">Sobre</h3>
 
                       
                       <div class="descricao">
-                            <p>Oi! meu nome é Rafael Soares de Lima, seja bem-vindo(a)!</p>
+                            <p>Oi! Meu nome é Rafael Soares de Lima, seja bem-vindo(a)!</p>
 
 
-                            <p>Sou uma pessoa apaixonada pela programação desde que eu tinha 15 anos.
-                              Sempre tive o sonho de trabalhar com programação e atualmente comecei a 
-                              colocar em prática estudando <span>HTML, CSS e JavaScript</span>. 
+                           <p>Sou formado em Análise e Desenvolvimento de Sistemas,
+                              Sempre tive o sonho de trabalhar com programação e continuo estudando
+                              para fazer esse sonho virar realidade, fiz estágio durante 6 meses,
+                              na parte de front-end tenho foco em <span>HTML, CSS, JavaScript, React e Bootstrap</span>. 
                               Gosto muito de café (ate demais), e meus principais passatempos 
-                              são jogar MMO RPG, ver anime e series.</p>
+                              tocar violão, ver anime e series, jogar um game!</p>
                             
                       </div>
                 </div>
 
-                <div class="informacao">
+                <div class="informacao" id="informacao-minhas-redes">
                      <h3 class="sub-titulo">Minhas redes</h3>
 
                      <ul class="redes-sociais">
@@ -74,5 +76,7 @@
            </div>
         </div>
     </main>
+
+    <script src="src/js/index.js"></script>
 </body>
 </html>
