--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                               para fazer esse sonho virar realidade, fiz estágio durante 6 meses,
                               na parte de front-end tenho foco em <span>HTML, CSS, JavaScript, React e Bootstrap</span>. 
                               Gosto muito de café (ate demais), e meus principais passatempos 
-                              tocar violão, ver anime e series, jogar um game!</p>
+                              tocar violão, ver anime, series e jogar um game!</p>
                             
                       </div>
                 </div>
