--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                      <ul class="redes-sociais">
 
                         <li>
-                            <a href="https://drive.google.com/file/d/1ss-FGtko7vIymCBDydPgf7qUHV0xaX4B/view?usp=sharing" 
+                            <a href="https://drive.google.com/file/d/1pQfZboAUpaPU7mRj-iCzVD92UFTVR93R/view?usp=share_link" 
                             target="_blank" class="curriculo">Curriculo</a>
                         </li>
 
