--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="minhas-informacoes">
           <img src="src/imgs/foto-perfil.jpg" alt="foto de perfil">
           <h1 class="name">Rafael S. de Lima</h1>
-          <h2 class="cargo">Desenvolvedor Frontend Júnior</h2>
+          <h2 class="cargo">Desenvolvedor Junior</h2>
         </div>
 
         <div class="conteudo">
